--- a/Notebooks/gdpproject.ipynb
+++ b/Notebooks/gdpproject.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "887447b0",
+   "id": "8cd743cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "6f08c32a",
+   "id": "7b46e07a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e98d551d",
+   "id": "b1c16ed5",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "7caf115a",
+   "id": "92bf1b11",
    "metadata": {
     "scrolled": true
    },
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "2cfc8184",
+   "id": "363bac66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "281fd70b",
+   "id": "e4c3743e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2c499594",
+   "id": "bba5ce79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7faaa197",
+   "id": "1d2a2224",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ee6155a9",
+   "id": "b857bc01",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1d164c2",
+   "id": "a413a365",
    "metadata": {},
    "source": [
     "Look at the shape of each DataFrame - how many rows? How many columns?\n"
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "02c5accf",
+   "id": "ce282d2e",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "98208709",
+   "id": "31c5383d",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bd46a17",
+   "id": "e223e3f8",
    "metadata": {},
    "source": [
     "Take a look at the datatypes for the columns in each DataFrame."
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7dac3da2",
+   "id": "846e23fc",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0ad31f9f",
+   "id": "d7f21d92",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07a8c4e0",
+   "id": "b2aaabaa",
    "metadata": {},
    "source": [
     "9. Take a look at the last 10 rows of each DataFrame in turn."
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "72f415e0",
+   "id": "144b7d1b",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0a39c29a",
+   "id": "8f2e9f59",
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8321f364",
+   "id": "9806d684",
    "metadata": {},
    "source": [
     "10. Drop the value footnotes column from both DataFrames. Check that this worked as expected"
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "06f0523b",
+   "id": "1bd23094",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1967bfa7",
+   "id": "76bbbf00",
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6b1a9abc",
+   "id": "3b61b973",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5bb91e01",
+   "id": "81d70ba2",
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fbe4857",
+   "id": "dccc9739",
    "metadata": {},
    "source": [
     "11. Change the columns for the GDP Per Capita DataFrame to ‘Country’, ‘Year’, and ‘GDP_Per_Capita’."
@@ -942,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "03dd74e7",
+   "id": "01bb7dfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a766ac0d",
+   "id": "33b45c1d",
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98041e34",
+   "id": "e3a777ec",
    "metadata": {},
    "source": [
     "12. Change the columns for the Internet Users DataFrame to ‘Country’, ‘Year’, and ‘Internet_Users_Pct’."
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "47dfdec7",
+   "id": "93745377",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,7 +1090,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "185060f4",
+   "id": "e1da85a3",
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23eb9e98",
+   "id": "9973afde",
    "metadata": {},
    "source": [
     "13. Merge the two DataFrames to one. Merge all rows from each of the two DataFrames. Call the new DataFrame gdp_and_internet_use"
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "4f5235d2",
+   "id": "61ad722e",
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4db8446",
+   "id": "79988ea8",
    "metadata": {},
    "source": [
     "14. Look at the first five rows of your new DataFrame to confirm it merged correctly."
@@ -1369,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "4342db83",
+   "id": "4725cc83",
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "916ef878",
+   "id": "e6d0818c",
    "metadata": {},
    "source": [
     "15. Look at the last five rows to make sure the data is clean and as expected"
@@ -1398,7 +1398,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "6cf398c9",
+   "id": "c4068517",
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aede2143",
+   "id": "a9d0fec5",
    "metadata": {},
    "source": [
     "16. Subset the combined DataFrame to keep only the data for 2004, 2009, and 2014. Check that this happened correctly"
@@ -1496,8 +1496,157 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "id": "e1ea87f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdp_and_internet_use = gdp_and_internet_use[gdp_and_internet_use[\"Year\"].isin([2004,2009,2014])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "d328af1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>GDP_Per_Capita</th>\n",
+       "      <th>Internet_Users_Pct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>2102.385234</td>\n",
+       "      <td>6.390000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>1758.904043</td>\n",
+       "      <td>3.550000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>1200.278256</td>\n",
+       "      <td>0.105809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>11623.866679</td>\n",
+       "      <td>60.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>10346.864199</td>\n",
+       "      <td>41.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>7604.838002</td>\n",
+       "      <td>2.420388</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>11512.705405</td>\n",
+       "      <td>18.090000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>10782.361398</td>\n",
+       "      <td>11.230000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>10058.435939</td>\n",
+       "      <td>4.634475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>8239.828837</td>\n",
+       "      <td>21.260000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Country  Year  GDP_Per_Capita  Internet_Users_Pct\n",
+       "0   Afghanistan  2014     2102.385234            6.390000\n",
+       "5   Afghanistan  2009     1758.904043            3.550000\n",
+       "10  Afghanistan  2004     1200.278256            0.105809\n",
+       "13      Albania  2014    11623.866679           60.100000\n",
+       "18      Albania  2009    10346.864199           41.200000\n",
+       "23      Albania  2004     7604.838002            2.420388\n",
+       "34      Algeria  2014    11512.705405           18.090000\n",
+       "39      Algeria  2009    10782.361398           11.230000\n",
+       "44      Algeria  2004    10058.435939            4.634475\n",
+       "56       Angola  2014     8239.828837           21.260000"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_and_internet_use.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a3f4230",
+   "metadata": {},
+   "source": [
+    "17. Create three new DataFrames, one for 2004, one for 2009, and one for 2014. Give them meaningful names that aren't too long."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2f6f8f32",
+   "id": "88a40bac",
    "metadata": {},
    "outputs": [],
    "source": []
